# utu_core

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
utu_core/: Cargo.toml
utu_core/src/: lib.rs  transactions.rs  types.rs
utu_http_server/: Cargo.toml
utu_http_server/src/: errors.rs  logger.rs  main.rs  state.rs
utu_http_server/src/endpoints/: fetch_tx_proof.rs  mod.rs
utu_http_server/src/utils/: mod.rs  routing.rs  type_conversion.rs
utu_wasm_module/: Cargo.toml
