[package]
name = "utu_http_server"
version = "0.1.0"
edition = "2021"

[dependencies]
utu_core = { path = "../utu_core" }
axum_auto_routes = { git = "https://github.com/Th0rgal/axum_auto_routes", rev = "ef190613942241f8f93a554cad7d64581a8a0916" }
axum = { version = "0.7.7" }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.1", features = ["cors"] }
lazy_static = "1.5.0"
serde_derive = "1.0.210"
chrono = "0.4.38"
log = "0.4.22"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
env_logger = "0.11.5"
ctor = "0.2.8"
